[package]
name = "image_filter"
version = "0.1.0"
authors = ["chronicl <lennard.koehler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-http = "2.0.0"
serde = "1.0.117"
serde_qs = "0.7.0"
env_logger = "0.8.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bytes"
harness = false