[package]
name = "image-server"
version = "0.1.0"
authors = ["chronicl <lennard.koehler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-http = "2.1.0"
actix-service = "1.0.6"
futures = "0.3.7"
serde = "1.0.117"
serde_qs = "0.7.0"
env_logger = "0.8.1"
clap = {version = "2.33.3", features = ["yaml"]}
rayon = "1.5.0"
glob = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bytes"
harness = false